--- a/react_demo/package.json
+++ b/react_demo/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.27.3",
     "axios": "^1.12.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
