--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@joint/plus": "file:joint-plus.tgz",
     "@types/node": "^25.0.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
-    "@joint/plus": "file:joint-plus.tgz",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
