refactor(style): 修改代码风格TSX

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,8 @@
   "singleQuote": true,
   "trailingComma": "all",
   "proseWrap": "never",
+  "objectWrap": "collapse",
+  "bracketSameLine": true,
   "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }],
   "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"]
 }
